<resources>
    <string name="app_name">FoodRecipesV3</string>
    <string name="home">Home</string>
    <string name="favorites">Favorites</string>
    <string name="my_recipes">My Recipes</string>
    <string name="new_recipe">New Recipe</string>
    <string name="recipe_title">Recipe Title</string>
    <string name="some_other_info">Some other info</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="go_to_sign_in">Go to Sign In</string>
    <string name="go_to_sign_up">Go to Sign Up</string>
    <string name="emailRegister">Email</string>
    <string name="sign_up">Sign Up</string>
    <string name="recipe_image">description</string>
    <string name="add_ingredient">Add Ingredient</string>
    <string name="ingredients">Ingredients</string>
    <string name="add_an_ingredient">Add an ingredient</string>
    <string name="enter_hashtags">Enter hashtags(#chicken #salad #vegan etc.)</string>
    <string name="enter_detailed_instructions">Enter detailed instructions</string>
    <string name="add_image">Add Image</string>
    <string name="add_images_up_to_3">Images (up to 3)</string>
    <string name="default_web_client_id">96062646398-8t1t9mj8bf2v8etjc1mtqta6clkhko5c.apps.googleusercontent.com</string>
    <string name="delete_image">Delete Image</string>
    <string name="title_char_limit">0/50</string>
    <string name="toogle_grid_view">Toogle Grid View</string>
    <string name="logout">Logout</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="delete_recipe">Delete Recipe</string>
    <string name="save_icon">Save Recipe</string>
    <string name="like_icon">Like Recipe</string>
    <string name="_0">0</string>
    <string name="assending_icon">assending icon</string>
    <string name="descending_icon">descending icon</string>
    <string name="dropdown_icon">dropdown icon</string>
    <string name="detailed_recipe">Detailed Recipe</string>
    <string name="level">Bulaşıkçı</string>
    <string name="admin">Admin</string>
    <string name="approve_recipe">approve</string>
    <string name="expand_image">expand image</string>
    <string name="suggestions">Öneri ve görüşlerinizi yazınız.</string>
    <string name="sendSuggestions">Gönder</string>
    <string name="titleRequired">Lütfen bir başlık girin</string>
    <string name="error_empty_hashtag">Lütfen en az bir hashtag girin</string>
    <string name="error_empty_description">Lütfen tarif açıklamasını girin</string>
    <string name="error_empty_ingredients">Lütfen en az bir malzeme ekleyin</string>
    <string name="error_empty_image">Lütfen en az bir resim ekleyin</string>
    <string-array name="order_options">
        <item>Date</item>
        <item>Like Count</item>
        <item>Save Count</item>
    </string-array>
    <string-array name="search_options">
        <item>Title</item>
        <item>Hashtag</item>
        <item>Ingredients</item>
    </string-array>
</resources>