<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:layout_marginStart="16dp"
    android:layout_marginTop="8dp"
    android:layout_marginEnd="16dp"
    android:layout_marginBottom="16dp"
    android:background="@drawable/card_background"
    android:clipToOutline="true"
    android:elevation="5dp"
    android:orientation="vertical"
    android:padding="0dp">
    <!-- Approve and Delete Button Section -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="end"
        android:paddingTop="8dp"
        android:paddingEnd="8dp">

        <!-- Approve Button -->
        <ImageButton
            android:id="@+id/approveButton"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginEnd="8dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/approve_recipe"
            android:src="@drawable/baseline_check_24"
            app:tint="@color/text_color_secondary"/>

        <!-- Delete Button -->
        <ImageButton
            android:id="@+id/deleteButton"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/delete_recipe"
            android:src="@drawable/baseline_clear_24"
            app:tint="@color/text_color_secondary"/>
    </LinearLayout>


    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/viewPager"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginBottom="8dp" />


    <TextView
        android:id="@+id/recipeTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="8dp"
        android:paddingTop="8dp"
        android:paddingRight="8dp"
        android:fontFamily="@font/merienda"
        android:text="@string/recipe_title"
        android:textColor="@color/text_color_primary"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/recipeDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="8dp"
        android:paddingTop="4dp"
        android:paddingRight="8dp"
        android:paddingBottom="8dp"
        android:text="@string/some_other_info"
        android:textColor="@color/text_color_secondary"
        android:textSize="14sp"
        android:visibility="gone"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:paddingBottom="8dp">

        <ImageView
            android:id="@+id/likeIcon"
            android:layout_width="24dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="4dp"
            android:clickable="true"
            android:contentDescription="@string/like_icon"
            android:focusable="true"
            android:src="@drawable/ic_heart_outline"
            app:tint="@color/text_color_secondary" />

        <TextView
            android:id="@+id/likeCount"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginEnd="16dp"
            android:fontFamily="@font/merienda"
            android:text="@string/_0"
            android:textColor="@color/text_color_secondary"
            android:textSize="18sp" />

        <ImageView
            android:id="@+id/saveIcon"
            android:layout_width="24dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="4dp"
            android:src="@drawable/baseline_bookmark_border_24"
            android:contentDescription="@string/save_icon"
            app:tint="@color/text_color_secondary"
            android:clickable="true"
            android:focusable="true"/>

        <TextView
            android:id="@+id/savedCount"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:fontFamily="@font/merienda"
            android:text="@string/_0"
            android:textColor="@color/text_color_secondary"
            android:textSize="18sp" />

    </LinearLayout>

</LinearLayout>
